--- a/gmall-publisher/pom.xml
+++ b/gmall-publisher/pom.xml
@@ -7,10 +7,10 @@
         <groupId>com.atguigu.bigdata</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <groupId>com.atguigu.bigdata.gmall</groupId>
-    <artifactId>gmall-publisher</artifactId>
+    <groupId>com.atguigu.gmall0218</groupId>
+    <artifactId>gmall0218-publisher</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>gmall-publisher</name>
+    <name>gmall0218-publisher</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -18,6 +18,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.atguigu.bigdata</groupId>
+            <artifactId>gmall-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -43,33 +49,22 @@
             <scope>test</scope>
         </dependency>
 
-    <dependency>
-        <groupId>org.apache.phoenix</groupId>
-        <artifactId>phoenix-core</artifactId>
-        <version>4.14.2-HBase-1.3</version>
-    </dependency>
 
-    <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-jdbc</artifactId>
-    </dependency>
-
-    <dependency>
-        <groupId>org.mybatis.spring.boot</groupId>
-        <artifactId>mybatis-spring-boot-starter</artifactId>
-        <version>1.3.4</version>
-    </dependency>
-    <dependency>
-        <groupId>com.google.guava</groupId>
-        <artifactId>guava</artifactId>
-        <version>20.0</version>
-    </dependency>
         <dependency>
-            <groupId>com.atguigu.bigdata</groupId>
-            <artifactId>gmall-common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>org.apache.phoenix</groupId>
+            <artifactId>phoenix-core</artifactId>
+            <version>4.14.2-HBase-1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
+
+
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
